<resources>
    <string name="app_name">DocuHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">DocuHome</string>
    <string name="nav_header_subtitle" translatable="false">zambecco.davide@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_mydoc">My Documents</string>
    <string name="menu_insert">Insert new</string>

    <string name="home_second" translatable="false">Home Second</string>
    <string name="Benvenuto">Welcome!</string>
    <string name="accountName" translatable="false">testName</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="Inserisci">Insert</string>
    <string name="DocType">Document type</string>
    <string name="Exp_date">Expiration date</string>
    <string name="Reameber"> Notify: </string>
    <string name="advancedOpt">More Options</string>
    <string name="inserimentoaccepted">Insert complete</string>
    <string name="inserimentonoaccepted">Error: Insert almost author and doc image!</string>
    <string name="rembembering">Remember it?</string>
    <string name="titolare">Author</string>
    <string name="noDoc">No Docs present for your account</string>
    <string name="details">Details</string>
    <string name="loading" translatable="false">Loading...</string>
    <string name="WinsDoc">Wait, insert documents</string>
    <string name="Nodate">Insert date or turn off date remember!</string>

    <string name="menu_gallery">My doc</string>
    <string name="title_activity_detail">detailActivity</string>
    <string name="Pictures">"Document:"</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email" translatable="false">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_passwordR">Repeat Password</string>
    <string name="action_sign_in">Sigin</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="InsertCmpl">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Write the same password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_before">"You must logon!"</string>
    <string name="userimage">User Image:</string>
    <string name="register" >Register</string>
    <string name="test" translatable="false">TEST</string>
    <string name="logout">Logout</string>

    <string-array name="DocType">
        <item>Bolletta</item>
        <item>Affitto</item>
        <item>Assicurazione</item>
        <item>Bollo</item>
        <item>Collaudo</item>
        <item>Tassa casalinga</item>
        <item>Vaccini animale</item>
        <item>CIP veterinario</item>
    </string-array>

</resources>
