<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_header"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:fontFamily="@font/montserratregular"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/accountUserNav"
        android:layout_width="80dp"
        android:scaleType="fitCenter"
        android:fontFamily="@font/montserratregular"
        android:layout_height="80dp"
        android:contentDescription="@string/nav_header_desc"
        android:padding="1dp"
        android:background="@drawable/circletop" />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/UserNamegg"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratregular"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/test"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserratregular"
        android:text="@string/nav_header_title" />

</LinearLayout>
