<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundgpp"
    android:fontFamily="@font/montserratregular"
    tools:context=".detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratregular"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/staticName"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="1dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:background="@drawable/roundedtviews"
                android:fontFamily="@font/montserratregular"
                android:text="@string/titolare"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dynamicName"
                android:gravity="center"
                android:background="@drawable/roundedtviews2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/montserratregular"
                android:paddingBottom="5dp"
                android:paddingTop="2dp"
                android:text="@string/test"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/StaticDocTypr"
                android:gravity="center"
                android:layout_width="match_parent"
                android:paddingTop="2dp"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/roundedtviews"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/montserratregular"
                android:text="@string/DocType"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dynamicDocType"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserratregular"
                android:background="@drawable/roundedtviews2"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/test"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/staticExpDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:fontFamily="@font/montserratregular"
                android:text="@string/Exp_date"
                android:background="@drawable/roundedtviews"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dynamicExpDate"
                android:layout_width="match_parent"
                android:layout_marginEnd="20dp"
                android:background="@drawable/roundedtviews2"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserratregular"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/test"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/dynamicRemberYesNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="10dp"
                android:button="@null"
                android:background="@drawable/allrounded"
                android:clickable="false"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:drawableEnd="@drawable/checknotify"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserratregular"
                android:text="@string/Reameber" />

            <TextView
                android:id="@+id/statiPictures"
                android:layout_width="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingTop="10dp"
                android:gravity="center"
                android:background="@drawable/roundedtviews"
                android:fontFamily="@font/montserratregular"
                android:text="@string/Pictures"
                android:textSize="20sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:background="@drawable/roundedtviews2"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:id="@+id/viewDocsImage"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backButtone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="15dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_keyboard_backspace_black_24dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_delete_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>